--- a/src/views/dashboard.default.orders.invoice.html
+++ b/src/views/dashboard.default.orders.invoice.html
@@ -97,7 +97,7 @@
       <fieldset class="form-group">
         <div class="col-lg-4">
           <label>Date</label>
-          <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016-01-14">
+          <input class="form-control" type="date" ng-model="date" placeholder="ex. 2016-01-14">
           <small class="text-muted">Press the triangle for the date widget</small>
         </div>
         <div class="col-lg-4">
