--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -10,7 +10,7 @@
             <th>#</th>
             <th>Name</th>
             <th>Date Created</th>
-            <th>Last Updated</th>
+            <th>Details</th>
           </tr>
         </thead>
         <tbody>
