--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -6,7 +6,7 @@
         <div class="card-panel-options" >
           <div class="col-lg-12 invisible-block">&nbsp;</div>
           <button ng-click="addOrder()" class="btn-status-success"><i class="fa fa-plus"></i> Add</button>
-          <button ng-click="editOrder()" class="btn-status-default"><i class="fa fa-pencil"></i> Edit</button>
+          <button ng-click="editOrder()" class="btn-status-default"><i class="fa fa-search"></i> View/Edit</button>
           <button ng-hide="isLoadingPDF" ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default"><i class="fa fa-file-pdf-o"></i> PDF</button>
           <button ng-show="isLoadingPDF" class="btn-status-success">Loading...</button>
           <button ng-click="exportOrders()" ng-hide="isLoading" class="btn-status-default"><i class="fa fa-file-excel-o"></i> Excel</button>
@@ -119,15 +119,15 @@
       <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1" ng-href="">Customer Info &nbsp;
         <span class="section-required" ng-show="nameRequired || emailRequired || phoneRequired"> * </span></a></li>
       <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2" ng-href="">Payment Info &nbsp;
-        <span class="section-required" ng-show="invoiceNumber || paymentRequired || statusRequired || dateRequired || creditRequired"> * </span></a></li>
+        <span class="section-required" ng-show="invoiceRequired || statusRequired || dateRequired || creditRequired"> * </span></a></li>
     </ul>
     <br>
     <form name="addOrderForm" ng-init="item=1">
       <div id="customerInfo.html" ng-show="item==1">
         <fieldset class="form-group">
           <div class="col-lg-4">
-            <label>Customer Name &nbsp;
-              <span class="input-required" ng-show="nameRequired"> * Required</span>
+            <label>Customer Name <span class="section-required" ng-hide="nameRequired">*</span>
+              <span class="input-required" ng-show="nameRequired">Required</span>
             </label>
             <input class="form-control" type="text" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
           </div>
@@ -139,7 +139,7 @@
 
           <div class="col-lg-4">
             <label>Email &nbsp;
-              <span class="input-required" ng-show="emailRequired"> * Required</span>
+              <span class="input-required" ng-show="emailRequired">Required</span>
             </label>
             <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com" name="email" required>
           </div>
@@ -147,8 +147,8 @@
         </fieldset>
         <fieldset class="form-group">
           <div class="col-lg-4">
-            <label>Phone Number &nbsp;
-              <span class="input-required" ng-show="phoneRequired"> * Required</span>
+            <label>Phone Number <span class="section-required" ng-hide="phoneRequired">*</span>
+              <span class="input-required" ng-show="phoneRequired">Required</span>
             </label>
             <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
           </div>
@@ -170,6 +170,12 @@
             <input class="form-control" ng-model="postalCode" type="text" placeholder="ex. V3R13R" name="postalCode">
           </div>
           <div class="col-lg-4">
+            <label>State/Province &nbsp;
+              <span ng-show="stateRequired" class="input-required">Required</span>
+            </label>
+            <input class="form-control" name="state" type="text" ng-model="state" placeholder="ex. Michigan" required>
+          </div>
+          <div class="col-lg-4">
             <label>Country</label>
             <select class="form-control" name="country" type="text" ng-model="country" placeholder="ex. 14484 123 Ave Surrey" required>
               <option value="CAN">Canada</option>
@@ -179,13 +185,6 @@
               <option value="KOR">South Korea</option>
               <option value="AUS">Australia</option>
             </select>
-          </div>
-          <div class="col-lg-4">
-            <label>State/Province &nbsp;
-              <span ng-show="stateRequired" class="input-required"> * Required</span>
-            </label>
-            <input class="form-control" name="state" type="text" ng-model="state" placeholder="ex. Michigan" required>
-            <!-- <small class="text-muted">Maximum 30 characters</small> -->
           </div>
 
         </fieldset>
@@ -201,8 +200,8 @@
       <div id="paymentInfo.html" ng-show="item==2">
         <fieldset class="form-group">
           <div class="col-lg-4">
-            <label>Invoice Number &nbsp;
-              <span class="input-required" ng-show="invoiceRequired"> * Required</span>
+            <label>Invoice Number <span class="section-required" ng-hide="invoiceRequired">*</span>
+              <span class="input-required" ng-show="invoiceRequired">Required</span>
             </label>
             <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
           </div>
@@ -217,8 +216,8 @@
             </select>
           </div>
           <div class="col-lg-4">
-            <label>Status &nbsp;
-              <span class="input-required" ng-show="statusRequired"> * Required</span>
+            <label>Status <span class="section-required" ng-hide="statusRequired">*</span>
+              <span class="input-required" ng-show="statusRequired">Required</span>
             </label>
             <select ng-model="status" class="form-control" name="status" required>
               <option value="pending">Pending</option>
@@ -231,15 +230,15 @@
         </fieldset>
         <fieldset class="form-group">
           <div class="col-lg-4">
-            <label>Invoice Date &nbsp;
-              <span class="input-required" ng-show="dateRequired"> * Required</span>
+            <label>Invoice Date <span class="section-required" ng-hide="dateRequired">*</span>
+              <span class="input-required" ng-show="dateRequired">Required</span>
             </label>
             <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
             <small class="text-muted">YYYY-MM-DD</small>
           </div>
           <div class="col-lg-4">
-            <label>Credit Terms (in Days) &nbsp;
-              <span class="input-required" ng-show="creditRequired"> * Required</span>
+            <label>Credit Terms (Days) <span class="section-required" ng-hide="creditRequired">*</span>
+              <span class="input-required" ng-show="creditRequired">Required</span>
             </label>
             <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
           </div>
@@ -254,7 +253,7 @@
         </fieldset>
         <fieldset class="form-group">
           <div class="col-lg-4">
-            <label>Delivery Charge</label>
+            <label>Delivery Charge ($)</label>
             <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryCharge" placeholder="ex. 40">
           </div>
           <div class="col-lg-4">
@@ -272,13 +271,13 @@
         <table class="table ">
           <thead>
             <tr>
-              <th>Product <span class="section-required" ng-show="sourcedProductRequired"> * </span></th>
+              <th>Product <span class="section-required"> * </span></th>
               <th>Finished Good</th>
-              <th>Batch <span class="section-required" ng-show="batchRequired"> * </span></th>
+              <th>Batch <span class="section-required"> * </span></th>
               <th>Unit Price
-                <br>($/{{selectedBlock.units}})<span class="section-required" ng-show="unitPriceRequired"> * </span></th>
+                <br>($/{{selectedBlock.units}})<span class="section-required"> * </span></th>
               <th>Quantity
-                <br>(Max: {{selectedBlock.quantity + " " + selectedBlock.units}})<span class="section-required" ng-show="quantityRequired"> * </span></th>
+                <br>[Max: {{selectedBlock.quantity + " " + selectedBlock.units}}]<span class="section-required" ng-show="quantityRequired"> * </span></th>
               <th>Tax Rate (%)</th>
               <th>&nbsp;
                 <span class="input-required" ng-show="tableRequired"> *</span>&nbsp;</th>
@@ -353,7 +352,7 @@
       <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1" ng-href="">Customer Info &nbsp;
         <span class="section-required" ng-show="nameRequired || emailRequired || phoneRequired"> * </span></a></li>
       <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2" ng-href="">Payment Info &nbsp;
-        <span class="section-required" ng-show="invoiceNumber || paymentRequired || statusRequired || dateRequired || creditRequired"> * </span></a></li>
+        <span class="section-required" ng-show="invoiceRequired || statusRequired || dateRequired || creditRequired"> * </span></a></li>
     </ul>
     <br>
     <form name="addOrderForm" ng-init="item=1">
@@ -444,10 +443,8 @@
             <small class="text-muted">Maximum 10 characters</small>
           </div>
           <div class="col-lg-4">
-            <label>Payment Method &nbsp;
-              <span class="input-required" ng-show="paymentRequired"> * Required</span>
-            </label>
-            <select ng-model="paymentMethod" class="form-control" name="payment" required>
+            <label>Payment Method</label>
+            <select ng-model="paymentMethod" class="form-control" name="payment">
               <option value="Cash">Cash</option>
               <option value="Cheque">Cheque</option>
               <option value="Credit">Credit</option>
