table row click enabled

--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -4,7 +4,7 @@
       <h2>Track Inventory</h2>
     </div>
     <div class="table-responsive table-card-responsive">
-      <table class="table ">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>#</th>
