--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="table-responsive table-card-responsive">
-        <table class="table ">
+        <table class="table table-hover">
           <thead>
             <tr>
               <th>Select</th>
@@ -24,7 +24,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="customer in customers track by $index">
+            <tr ng-repeat="customer in customers track by $index" ng-click="$parent.selectedCustomer = $parent.customers[$index]">
               <td data-label="Select">
                 <input type="radio" ng-model="$parent.selectedCustomer" ng-value="$parent.customers[$index]">
               </td>
