--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -35,7 +35,7 @@
   <div class="row"><br>
     <div class="col-lg-12">
     <div class="table-responsive table-card-responsive">
-      <table class="table ">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>Select</th>
@@ -45,7 +45,7 @@
             <th>Inventory Input Date</th>
           </tr>
         </thead>
-        <tbody ng-repeat="block in blocks track by $index">
+        <tbody ng-repeat="block in blocks track by $index" ng-click="$parent.selectedBlock = $parent.blocks[$index]">
           <tr>
             <td data-label="Select">
               <input type="radio" ng-model="$parent.selectedBlock" ng-value="$parent.blocks[$index]">
