--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="table-responsive table-card-responsive">
-        <table class="table">
+        <table class="table table-hover">
           <thead>
             <tr>
               <th>Select</th>
@@ -19,7 +19,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="sourcedProduct in sourcedProducts track by $index">
+            <tr ng-repeat="sourcedProduct in sourcedProducts track by $index" ng-click="$parent.selectedProduct = $parent.sourcedProducts[$index]">
               <td data-label="Select">
                 <input type="radio" ng-model="$parent.selectedProduct" ng-value="$parent.sourcedProducts[$index]">
               </td>
