--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="table-responsive table-card-responsive">
-        <table class="table ">
+        <table class="table table-hover">
           <thead>
             <tr>
               <th>Select</th>
@@ -19,7 +19,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="supplyChain in supplyChains track by $index">
+            <tr ng-repeat="supplyChain in supplyChains track by $index" ng-click="$parent.selectedSupplyChain = $index">
               <td data-label="Select">
                 <input type="radio" ng-model="$parent.selectedSupplyChain" ng-value="$index">
               </td>
