Product bug fix

--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -6,7 +6,7 @@
         <li><a ng-class="{activeTab: state.includes('dashboard.default.inventory')}" ui-sref=".inventory.menu">Inventory</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.orders')}" ui-sref=".orders.menu">Orders</a></li>
         <li><a ng-class="{activeTab: state.includes('dashboard.default.customers')}" ui-sref=".customers.menu">Customers</a></li>
-        <!-- <li><a ng-class="{activeTab: state.includes('dashboard.default.ecommerce')}" ui-sref=".ecommerce">E-commerce</a></li> -->
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.ecommerce')}" ui-sref=".ecommerce">E-commerce</a></li>
     </ul>
 </div>
 
