--- a/src/css/components/_panel.scss
+++ b/src/css/components/_panel.scss
@@ -29,7 +29,7 @@
       line-height: 75px;
       color: #FFF;
     }
-    @media (max-width: 768px) {
+    @media (max-width: 900px) {
       .card-panel-options {
         float: right;
         margin-top: -50px;
@@ -39,10 +39,15 @@
         line-height: 50px;
       }
     }
+    @media (max-width: 800px) {
+      h2 {
+         display: hidden;
+      }
+    }
   }
   @media (max-width: 768px) {
     .card-panel-header {
-       max-height: 70px;
+       max-height: 120px;
     }
   }
 }
@@ -183,7 +188,7 @@
   display: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
 .invisible-block {
     display: block;
   }
