--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -66,7 +66,7 @@
 <!-- VIEW ORDER DETAIL MODAL-->
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Invoice #{{order.invoiceNumber}}</h3>
+    <h3 class="modal-title">Invoice #{{order.invoiceNumber || "Not Specified"}}</h3>
 
     <div class="card-panel-options">
       <div ng-switch="pdfStatus">
