--- a/src/views/dashboard.default.ecommerce.html
+++ b/src/views/dashboard.default.ecommerce.html
@@ -10,7 +10,7 @@
             </div>
          </div>
          <div class="table-responsive table-card-responsive">
-            <table class="table ">
+            <table class="table table-hover">
                <thead>
                   <tr>
                      <th>Select</th>
@@ -21,7 +21,7 @@
                   </tr>
                </thead>
                <tbody>
-                  <tr ng-repeat="block in blocks track by $index">
+                  <tr ng-repeat="block in blocks track by $index" ng-click="$parent.selectedBlock = $parent.blocks[$index]">
                      <td data-label="Select">
                         <input type="radio" ng-model="$parent.selectedBlock" ng-value="$parent.blocks[$index]">
                      </td>
