--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -4,10 +4,9 @@
       <h2>Track Inventory</h2>
     </div>
     <div class="table-responsive table-card-responsive">
-      <table class="table table-hover">
+      <table class="table">
         <thead>
           <tr>
-            <th>#</th>
             <th>Name</th>
             <th>Date Created</th>
             <th>Details</th>
@@ -15,7 +14,6 @@
         </thead>
         <tbody>
           <tr ng-repeat="supplyChain in supplyChains track by $index">
-            <td data-label="#">{{$index + 1}}</td>
             <td data-label="Name">{{supplyChain.name}}</td>
             <td data-label="Date Created">{{supplyChain.dateCreated | date: 'short'}}</td>
             <td data-label="Details">
