--- a/src/views/dashboard.settings.general.html
+++ b/src/views/dashboard.settings.general.html
@@ -29,7 +29,7 @@
                     <label>Account Email Address</label>
                   </div>
                   <div class="col-lg-9">
-                    <input class="form-control" ng-disabled="isLoading" ng-model="email" type="email" placeholder="No email registered." disabled></input>
+                    <input class="form-control" ng-model="email" type="email" placeholder="No email registered." disabled></input>
                     <small class="text-muted">For security reasons, please contact us to change your email.</small>
                   </div>
                 </div>
@@ -44,7 +44,6 @@
                   </div>
                   <div class="col-lg-9">
                     <input class="form-control" ng-disabled="isLoading" ng-model="name" type="text" placeholder="No name registered." ng-disabled="isSaving"></input>
-                    <small class="text-muted">Please enter your new password.</small>
                   </div>
                 </div>
               </fieldset>
@@ -56,7 +55,6 @@
                   </div>
                   <div class="col-lg-9">
                     <input class="form-control" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
-                    <small class="text-muted">Please enter only numbers.</small>
                   </div>
                 </div>
               </fieldset>
