--- a/src/views/dashboard.default.ecommerce.html
+++ b/src/views/dashboard.default.ecommerce.html
@@ -64,25 +64,28 @@
       <h3 class="modal-title">Add Batch to E-Commerce</h3>
    </div>
    <div class="modal-body">
-      <form>
+      <form name="addEcommerceForm">
          <fieldset class="form-group">
             <div class="col-lg-8 col-lg-offset-2">
          </fieldset>
          <fieldset class="form-group">
             <div class="col-lg-6">
-               <label>Choose supply chain: </label>
-               <select ng-model="selectedSupplyChain" ng-options="supplyChain as supplyChain.name for supplyChain in supplyChains" ng-disabled="allDisabled" class="form-control"></select>
+               <label>Choose supply chain: <span class="section-required" ng-hide="supplyChainRequired">*</span>
+                 <span ng-show="supplyChainRequired" class="input-required">Required</span></label>
+               <select name="selectedSupplyChain" ng-model="selectedSupplyChain" ng-options="supplyChain as supplyChain.name for supplyChain in supplyChains" ng-disabled="allDisabled" class="form-control" required></select>
             </div>
             <div class="col-lg-6">
-               <label>Choose stage: </label>
-               <select ng-model="selectedStage" ng-options="stage as stage.self.name for stage in stages" ng-disabled="allDisabled" class="form-control"></select>
+               <label>Choose stage: <span class="section-required" ng-hide="stageRequired">*</span>
+                 <span ng-show="stageRequired" class="input-required">Required</span></label>
+               <select name="selectedStage" ng-model="selectedStage" ng-options="stage as stage.self.name for stage in stages" ng-disabled="allDisabled" class="form-control" required></select>
             </div>
          </fieldset>
 
-         <fieldset class="form-group" ng-show="selectedStage">
+         <fieldset class="form-group" ><!--ng-show="selectedStage"-->
             <div class="col-lg-6">
-               <label>Choose batch: </label>
-               <select ng-model="selectedBlock" ng-options="(block.displayName) for block in blocks" ng-disabled="allDisabled" class="form-control"></select>
+               <label>Choose batch: <span class="section-required" ng-hide="batchRequired">*</span>
+                 <span ng-show="batchRequired" class="input-required">Required</span></label>
+               <select name="selectedBlock" ng-model="selectedBlock" ng-options="(block.displayName) for block in blocks" ng-disabled="allDisabled" class="form-control" required></select>
             </div>
             <div class="col-lg-6" >
                <label>Attach Product Photo</label>
@@ -92,10 +95,11 @@
                </div>
             </div>
          </fieldset>
-         <fieldset class="form-group" ng-show="selectedBlock">
+         <fieldset class="form-group" ><!--ng-show="selectedBlock"-->
             <div class="col-lg-4">
-               <label>Unit Price: </label>
-               <input class="form-control" ng-model="unitPrice" type="text" ng-disabled="allDisabled" placeholder="ex. 2.49">
+               <label>Unit Price: <span class="section-required" ng-hide="unitPriceRequired">*</span>
+                 <span ng-show="unitPriceRequired" class="input-required">Required</span></label>
+               <input class="form-control" name="unitPrice" ng-model="unitPrice" type="text" ng-disabled="allDisabled" placeholder="ex. 2.49" required>
             </div>
             <div class="col-lg-4">
                <label>Units: </label>
@@ -108,10 +112,11 @@
             </div>
          </fieldset>
 
-         <fieldset class="form-group" ng-show="selectedBlock">
+         <fieldset class="form-group" ><!--ng-show="selectedBlock"-->
             <div class="col-lg-12">
                <label>Description: </label>
-               <input class="form-control" ng-model="description" type="text" ng-disabled="allDisabled" placeholder="ex. Filleted, Five-pound bag"></input><button ng-click="upload()" class="btn-table-success btn-upload alignright">Upload</button>
+               <input class="form-control" ng-model="description" type="text" ng-disabled="allDisabled" placeholder="ex. Filleted, Five-pound bag"></input>
+               <!-- <button ng-click="upload()" class="btn-table-success btn-upload alignright">Upload</button> -->
             </div>
          </fieldset>
       </form>
