number input validation added across

--- a/src/css/components/_modal.scss
+++ b/src/css/components/_modal.scss
@@ -59,8 +59,8 @@ div.modal-content {
     color: #000;
     background-color: #fff;
     outline: none;
-    -webkit-appearance: none;
-    -webkit-shadow: none;
+   //  -webkit-appearance: none;
+   //  -webkit-shadow: none;
     border-radius: 1px;
     border: 1px solid #E0E0E0;
   }
