--- a/src/views/dashboard.default.ecommerce.html
+++ b/src/views/dashboard.default.ecommerce.html
@@ -81,7 +81,7 @@
             </div>
          </fieldset>
 
-         <fieldset class="form-group" ><!--ng-show="selectedStage"-->
+         <fieldset class="form-group" ng-show="selectedStage">
             <div class="col-lg-6">
                <label>Choose batch: <span class="section-required" ng-hide="batchRequired">*</span>
                  <span ng-show="batchRequired" class="input-required">Required</span></label>
@@ -95,24 +95,24 @@
                </div>
             </div>
          </fieldset>
-         <fieldset class="form-group" ><!--ng-show="selectedBlock"-->
+         <fieldset class="form-group" ng-show="selectedBlock">
             <div class="col-lg-4">
                <label>Unit Price: <span class="section-required" ng-hide="unitPriceRequired">*</span>
                  <span ng-show="unitPriceRequired" class="input-required">Required</span></label>
-               <input class="form-control" name="unitPrice" ng-model="unitPrice" type="text" ng-disabled="allDisabled" placeholder="ex. 2.49" required>
+               <input class="form-control" name="unitPrice" ng-model="unitPrice" type="number" step="0.01" ng-disabled="allDisabled" placeholder="ex. 2.49" required>
             </div>
             <div class="col-lg-4">
                <label>Units: </label>
-               <input ng-disabled="selectedBlock" class="form-control" ng-model="selectedBlock.units" type="text" ng-disabled="allDisabled" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder=""></input>
+               <input class="form-control" ng-model="selectedBlock.units" type="text" ng-disabled="true" placeholder=""></input>
                <small class="text-muted">[Fixed]: Block units.</small>
             </div>
             <div class="col-lg-4">
                <label>Tax: </label>
-               <input class="form-control" ng-model="tax" type="text" ng-disabled="allDisabled" placeholder="">
+               <input class="form-control" ng-model="tax" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57'  ng-disabled="allDisabled" placeholder="">
             </div>
          </fieldset>
 
-         <fieldset class="form-group" ><!--ng-show="selectedBlock"-->
+         <fieldset class="form-group" ng-show="selectedBlock">
             <div class="col-lg-12">
                <label>Description: </label>
                <input class="form-control" ng-model="description" type="text" ng-disabled="allDisabled" placeholder="ex. Filleted, Five-pound bag"></input>
