--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -91,17 +91,13 @@
               <span ng-show="sourcedProductRequired" class="input-required">Required</span>
             </label>
             <select class="form-control" name="selectedSourcedProduct" ng-model="selectedSourcedProduct" ng-options="sourcedProduct.name for sourcedProduct in sourcedProducts" required></select>
-            <!-- <select class="form-control" name="selectedSourcedProduct" ng-model="selectedSourcedProduct" required>
-               <option value="">-- Select Product Type --</option>
-               <option ng-repeat="sourcedProduct in sourcedProducts" value="{{sourcedProduct.name}}">{{sourcedProduct.name}}</option>
-            </select> -->
+
             <small class="text-muted">Item must be listed within the Products tab.</small>
           </div>
           <div class="col-lg-6">
             <label>Finished Good Type &nbsp;
             </label>
             <select class="form-control" name="selectedFinishedProduct" ng-disabled="!selectedSourcedProduct" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts"></select>
-            <!-- <small class="text-muted">ex. Filleted, Frozen.</small> -->
           </div>
         </fieldset>
         <fieldset class="form-group">
@@ -113,21 +109,19 @@
               <option value="half lbs">1/2 lbs</option>
               <option value="kg">kg</option>
             </select>
-            <!-- <small class="text-muted">Please choose between the three options.</small> -->
           </div>
           <div class="col-lg-6">
-            <label>Batch Number</label>
-            <input class="form-control" ng-model="blockNumber" type="text" step="1" placeholder="ex. A5432">
-            <small class="text-muted">[Optional] For custom batch/lot numbers.</small>
+           <label>Quantity <span class="section-required" ng-hide="quantityRequired">*</span>
+             <span ng-show="quantityRequired" class="input-required">Required</span>
+           </label>
+           <input class="form-control" name="quantity" ng-model="quantity" type="number" min="1" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 3500" required></input>
           </div>
         </fieldset>
         <fieldset class="form-group">
-          <div class="col-lg-6">
-            <label>Quantity <span class="section-required" ng-hide="quantityRequired">*</span>
-              <span ng-show="quantityRequired" class="input-required">Required</span>
-            </label>
-            <input class="form-control" name="quantity" ng-model="quantity" type="text" min="1" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 3500" required></input>
-            <!-- <small class="text-muted">Please enter a numerical value.</small> -->
+           <div class="col-lg-6">
+            <label>Batch Number</label>
+            <input class="form-control" ng-model="blockNumber" type="text" step="1" placeholder="ex. A5432">
+            <small class="text-muted">[Optional] For custom batch/lot numbers.</small>
           </div>
         </fieldset>
       </div>
@@ -139,17 +133,15 @@
               <span ng-show="catchDateRequired" class="input-required">Required</label>
             </label>
             <input class="form-control" name="catchDate" ng-model="catchDate" type="date" placeholder="ex. 5/14/2016" required>
-            <small class="text-muted">YYYY-MM-DD</small>
+            <small class="text-muted">Please enter in YYYY-MM-DD Format</small>
           </div>
           <div class="col-lg-4">
             <label>Catch Region</label>
-            <input class="form-control" ng-model="catchRegion" placeholder="ex. Gulf of St. Lawrence">
-            <!-- <small class="text-muted">Enter the Catch Location</small> -->
+            <input class="form-control" ng-model="catchRegion" placeholder="ex. Zone 3, Lake Erie">
           </div>
           <div class="col-lg-4">
             <label>Water Depth (Meters)</label>
-            <input class="form-control" ng-model="waterDepth" type="number" step="1" placeholder="ex. 500">
-            <!-- <small class="text-muted">Enter the water depth in meters.</small> -->
+            <input class="form-control" ng-model="waterDepth" type="number" step="1" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 3500" placeholder="ex. 500">
           </div>
         </fieldset>
         <fieldset class="form-group">
@@ -192,7 +184,7 @@
         </div>
         <div class="col-lg-12">
           <label>Quantity</label>
-          <input class="form-control" type="number" ng-model="quantity" placeholder="ex. 4000">
+          <input class="form-control" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="quantity" placeholder="ex. 4000">
           <!-- <small class="text-muted">Please enter a numerical value.</small> -->
         </div>
       </fieldset>
@@ -233,7 +225,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Choose how much inventory to move: </label>
-          <input class="form-control" ng-model="quantity" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
+          <input class="form-control" ng-model="quantity" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 4000"></input>
           <small class="text-muted"><b>{{getRemainingQuantity() + " " + block1.units}} remaining of {{block1.quantity + " " + block1.units}} in chosen stage.</b></small>
         </div>
       </fieldset>
