--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -151,7 +151,7 @@
                      <span class="section-required" ng-hide="phoneRequired">*</span>
                      <span class="input-required" ng-show="phoneRequired">Required</span>
                   </label>
-                  <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
+                  <input class="form-control" maxlength="10" ng-model="phone" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
                </div>
 
                <div class="col-lg-4">
@@ -160,7 +160,7 @@
                </div>
                <div class="col-lg-4">
                   <label>Postal/ZIP Code</label>
-                  <input class="form-control" ng-model="postalCode" type="text" placeholder="ex. V3R13R" name="postalCode">
+                  <input class="form-control" ng-model="postalCode" type="text" placeholder="ex. V3R13R" name="postalCode" maxlength="6">
                </div>
             </fieldset>
 
@@ -205,7 +205,7 @@
                      <span class="section-required" ng-hide="invoiceRequired">*</span>
                      <span class="input-required" ng-show="invoiceRequired">Required</span>
                   </label>
-                  <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+                  <input class="form-control" ng-model="invoiceNumber" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
                </div>
                <div class="col-lg-4">
                   <label>Payment Method
@@ -240,14 +240,14 @@
                      <span class="input-required" ng-show="dateRequired">Required</span>
                   </label>
                   <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
-                  <small class="text-muted">YYYY-MM-DD</small>
+                  <small class="text-muted">Please enter in YYYY-MM-DD format</small>
                </div>
                <div class="col-lg-4">
                   <label>Credit Terms (Days)
                      <span class="section-required" ng-hide="creditRequired">*</span>
                      <span class="input-required" ng-show="creditRequired">Required</span>
                   </label>
-                  <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
+                  <input class="form-control" type="number" min="0" max="99999" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
                </div>
                <div class="col-lg-4">
                   <label>Currency</label>
@@ -262,11 +262,11 @@
             <fieldset class="form-group">
                <div class="col-lg-4">
                   <label>Delivery Charge ($)</label>
-                  <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryCharge" placeholder="ex. 40">
+                  <input class="form-control" type="number" min="0" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="deliveryCharge" placeholder="ex. 40">
                </div>
                <div class="col-lg-4">
                   <label>Delivery Tax (%)</label>
-                  <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryChargeTaxRate" placeholder="ex. 10">
+                  <input class="form-control" type="number" min="0" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="deliveryChargeTaxRate" placeholder="ex. 10">
                </div>
             </fieldset>
 
@@ -330,7 +330,7 @@
                      </td>
 
                      <td data-label="Quantity">
-                        <input type="number" min="0" ng-model="quantity" value="1" class="form-control" placeholder="ex. 10" name="quantity" required></input>
+                        <input type="number" min="0" ng-model="quantity" onkeypress='return event.charCode >= 48 && event.charCode <= 57' class="form-control" placeholder="ex. 10" name="quantity" required></input>
                      </td>
 
                      <td data-label="Tax">
@@ -399,7 +399,7 @@
                   <label>Phone Number &nbsp;
                      <span class="input-required" ng-show="phoneRequired"> * Required</span>
                   </label>
-                  <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
+                  <input class="form-control" maxlength="10" ng-model="phone" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
                   <small class="text-muted">No spaces or dashes</small>
                </div>
 
@@ -454,7 +454,7 @@
                   <label>Invoice Number &nbsp;
                      <span class="input-required" ng-show="invoiceRequired"> * Required</span>
                   </label>
-                  <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+                  <input class="form-control" ng-model="invoiceNumber" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
                   <small class="text-muted">Maximum 10 characters</small>
                </div>
                <div class="col-lg-4">
@@ -485,13 +485,13 @@
                      <span class="input-required" ng-show="dateRequired"> * Required</span>
                   </label>
                   <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
-                  <small class="text-muted">YYYY-MM-DD</small>
+                  <small class="text-muted">Please enter in YYYY-MM-DD format</small>
                </div>
                <div class="col-lg-4">
                   <label>Credit Terms (in Days) &nbsp;
                      <span class="input-required" ng-show="creditRequired"> * Required</span>
                   </label>
-                  <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
+                  <input class="form-control" type="number" min="0" max="99999" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
                </div>
                <div class="col-lg-4">
                   <label>Currency</label>
@@ -505,11 +505,11 @@
             <fieldset class="form-group">
                <div class="col-lg-4">
                   <label>Delivery Charge</label>
-                  <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryCharge" placeholder="ex. 40">
+                  <input class="form-control" type="number" min="0" max="99999" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="deliveryCharge" placeholder="ex. 40">
                </div>
                <div class="col-lg-4">
                   <label>Delivery Tax (%)</label>
-                  <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryChargeTaxRate" placeholder="ex. 10">
+                  <input class="form-control" type="number" min="0" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-model="deliveryChargeTaxRate" placeholder="ex. 10">
                </div>
             </fieldset>
          </div>
@@ -546,7 +546,7 @@
          <fieldset class="form-group">
             <div class="col-lg-4">
                <label>Invoice Number</label>
-               <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+               <input class="form-control" ng-model="invoiceNumber" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
             </div>
             <div class="col-lg-4">
                <label>Payment Method</label>
@@ -575,10 +575,12 @@
             <div class="col-lg-6">
                <label>Date Range - From:</label>
                <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
+               <small class="text-muted">Please enter in YYYY-MM-DD format</small>
             </div>
             <div class="col-lg-6">
                <label>Date Range - To:</label>
                <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
+               <small class="text-muted">Please enter in YYYY-MM-DD format</small>
             </div>
          </fieldset>
 
