--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -29,15 +29,15 @@
               <fieldset class="form-group">
                 <div class="col-lg-4">
                   <label>Main Phone</label>
-                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="phone" placeholder="ex. 7789183040" type="number"></input>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="phone" placeholder="ex. 7789183040" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' maxlength="10"></input>
                 </div>
                 <div class="col-lg-4">
                   <label>Fax</label>
-                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="faxPhone" placeholder="ex. 7789183040" type="number"></input>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="faxPhone" placeholder="ex. 7789183040" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' maxlength="10"></input>
                 </div>
                 <div class="col-lg-4">
                   <label>Sales Phone</label>
-                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="salesPhone" placeholder="ex. 7789183040" type="number"></input>
+                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="salesPhone" placeholder="ex. 7789183040" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' maxlength="10"></input>
                 </div>
               </fieldset>
             </div>
