--- a/src/views/dashboard.settings.general.html
+++ b/src/views/dashboard.settings.general.html
@@ -54,7 +54,7 @@
                     <label>Phone Number</label>
                   </div>
                   <div class="col-lg-9">
-                    <input class="form-control" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
+                    <input class="form-control" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="number" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
                   </div>
                 </div>
               </fieldset>
