Simple graphs, pie chart

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -58,6 +58,16 @@
         </div>
       </div>
     </div>
+    <div class="col-lg-6">
+      <div class="card-panel">
+        <div class="card-panel-header">
+          <h2>Analytics</h2>
+        </div>
+        <div class="table-responsive table-card-responsive">
+          <mattgraph width="150" height="150" type="pie" name="test1"></mattgraph>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
